基本完成功能

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,13 @@
 APP_ENV=local
 APP_DEBUG=true
-APP_KEY=SomeRandomString
+APP_KEY=mZsq244kAF75hbJtG8rVLdAqihapkvuI
 
-DB_HOST=localhost
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_HOST=127.0.0.1:3306
+DB_DATABASE=xiciaddinfo
+DB_USERNAME=root
+DB_PASSWORD=
+
+PAGE_ROWS = 20
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
